refactor(*): apply new JSX's transform
setup @babel/preset-react and eslint for this change

--- a/.eslintrc
+++ b/.eslintrc
@@ -74,6 +74,8 @@
       "ignoreCase": false,
       "noSortAlphabetically": false,
       "reservedFirst": true
-    }]
+    }],
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
