--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,9 @@
   "presets": [
     ["@babel/preset-env", { "modules": false }],
     "@babel/preset-typescript",
-    "@babel/preset-react"
+    ["@babel/preset-react", {
+      "runtime": "automatic"
+    }]
   ],
   "env": {
     "test": {
