--- a/package.json
+++ b/package.json
@@ -109,5 +109,6 @@
     "react-redux": "7.2.3",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
