--- a/package.json
+++ b/package.json
@@ -25,90 +25,96 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.13.13",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.13.8",
+    "@babel/core": "7.17.9",
+    "@babel/plugin-proposal-object-rest-spread": "7.17.3",
     "@babel/plugin-syntax-async-generators": "7.8.4",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-async-to-generator": "7.13.0",
-    "@babel/plugin-transform-modules-commonjs": "7.13.8",
-    "@babel/plugin-transform-runtime": "7.13.10",
-    "@babel/preset-env": "7.13.12",
-    "@babel/preset-react": "7.13.13",
-    "@babel/preset-typescript": "7.13.0",
-    "@babel/register": "7.13.8",
-    "@babel/runtime": "7.13.10",
-    "@types/ramda": "0.27.39",
-    "@types/react-dom": "17.0.3",
-    "@types/react-router-dom": "5.1.7",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
-    "add-asset-html-webpack-plugin": "3.2.0",
-    "autoprefixer": "10.2.5",
-    "babel-loader": "8.2.2",
-    "commitizen": "4.2.3",
-    "compression-webpack-plugin": "7.1.2",
-    "css-loader": "5.2.0",
+    "@babel/plugin-transform-async-to-generator": "7.16.8",
+    "@babel/plugin-transform-modules-commonjs": "7.17.9",
+    "@babel/plugin-transform-runtime": "7.17.0",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/register": "7.17.7",
+    "@babel/runtime": "7.17.9",
+    "@types/ramda": "0.28.11",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.0",
+    "@types/react-router-dom": "5.3.3",
+    "@types/webpack-env": "1.16.3",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "add-asset-html-webpack-plugin": "5.0.2",
+    "autoprefixer": "10.4.4",
+    "babel-loader": "8.2.4",
+    "commitizen": "4.2.4",
+    "compression-webpack-plugin": "9.2.0",
+    "css-loader": "6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "cssnano": "5.1.7",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.23.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-import-resolver-webpack": "0.13.0",
-    "eslint-loader": "4.0.2",
+    "eslint": "8.13.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-webpack": "0.13.2",
     "eslint-plugin-class-property": "1.1.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-react": "7.23.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-webpack-plugin": "2.5.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-webpack-plugin": "3.1.1",
     "file-loader": "6.2.0",
-    "html-webpack-plugin": "5.3.1",
+    "html-webpack-plugin": "5.5.0",
     "import-glob-loader": "1.1.0",
-    "jest": "26.6.3",
-    "jest-cli": "26.6.3",
-    "mini-css-extract-plugin": "1.4.0",
-    "node-sass": "5.0.0",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
-    "plop": "2.7.4",
-    "postcss": "8.2.8",
-    "postcss-import": "14.0.0",
-    "postcss-loader": "5.2.0",
-    "prettier": "2.2.1",
+    "jest": "27.5.1",
+    "jest-cli": "27.5.1",
+    "mini-css-extract-plugin": "2.6.0",
+    "node-sass": "7.0.1",
+    "npm-upgrade": "3.1.0",
+    "plop": "3.0.5",
+    "postcss": "8.4.12",
+    "postcss-import": "14.1.0",
+    "postcss-loader": "6.2.1",
+    "prettier": "2.6.2",
     "rimraf": "3.0.2",
-    "sass-loader": "11.0.1",
+    "sass-loader": "12.6.0",
     "script-ext-html-webpack-plugin": "2.1.5",
-    "semantic-release": "17.4.2",
-    "style-loader": "2.0.0",
-    "stylelint": "13.12.0",
-    "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-recommended": "4.0.0",
-    "stylelint-prettier": "1.2.0",
-    "stylelint-scss": "3.19.0",
-    "tailwindcss": "2.0.4",
-    "typescript": "4.2.3",
+    "semantic-release": "19.0.2",
+    "style-loader": "3.3.1",
+    "stylelint": "14.6.1",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-recommended": "7.0.0",
+    "stylelint-prettier": "2.0.0",
+    "stylelint-scss": "4.2.0",
+    "tailwindcss": "3.0.24",
+    "typescript": "4.6.3",
     "url-loader": "4.1.1",
-    "webpack": "5.28.0",
-    "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "4.6.0",
-    "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3"
+    "webpack": "5.72.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1",
+    "webpack-merge": "5.8.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-brands-svg-icons": "5.15.3",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@fortawesome/react-fontawesome": "0.1.14",
-    "@loadable/component": "5.14.1",
-    "classnames": "2.2.6",
-    "firebase": "8.3.1",
-    "history": "5.0.0",
-    "ramda": "0.27.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.3",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0"
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-brands-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "@loadable/component": "5.15.2",
+    "classnames": "2.3.1",
+    "firebase": "^9.6.11",
+    "history": "5.3.0",
+    "lodash.throttle": "4.1.1",
+    "ramda": "0.28.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-redux": "^7.2.8",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "packageManager": "yarn@3.2.0"
 }
