--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,12 @@
   "presets": [
     ["@babel/preset-env", { "modules": false }],
     "@babel/preset-typescript",
-    ["@babel/preset-react", {
-      "runtime": "automatic"
-    }]
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ],
   "env": {
     "test": {
@@ -12,14 +15,14 @@
         "dynamic-import-node",
         "@babel/plugin-transform-modules-commonjs",
         "@babel/plugin-syntax-dynamic-import"
-      ]  
+      ]
     }
   },
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-transform-modules-commonjs",
-    "@babel/plugin-transform-runtime", 
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-syntax-async-generators",
     "@babel/plugin-transform-async-to-generator",
     "@babel/plugin-syntax-dynamic-import"
