--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-typescript": "7.16.7",
     "@babel/register": "7.17.7",
     "@babel/runtime": "7.17.9",
+    "@types/jest": "^27.4.1",
     "@types/ramda": "0.28.11",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
