--- a/package.json
+++ b/package.json
@@ -25,62 +25,54 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "7.17.9",
-    "@babel/plugin-proposal-object-rest-spread": "7.17.3",
-    "@babel/plugin-syntax-async-generators": "7.8.4",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-async-to-generator": "7.16.8",
-    "@babel/plugin-transform-modules-commonjs": "7.17.9",
-    "@babel/plugin-transform-runtime": "7.17.0",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.16.7",
-    "@babel/register": "7.17.7",
-    "@babel/runtime": "7.17.9",
-    "@testing-library/react": "^13.1.1",
-    "@types/jest": "^27.4.1",
+    "@testing-library/react": "13.4.0",
+    "@types/classnames": "2.3.1",
+    "@types/jest": "29.4.0",
     "@types/ramda": "0.28.11",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.0",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.16.3",
-    "@typescript-eslint/eslint-plugin": "5.19.0",
-    "@typescript-eslint/parser": "5.19.0",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
     "add-asset-html-webpack-plugin": "5.0.2",
-    "autoprefixer": "10.4.4",
+    "autoprefixer": "10.4.13",
     "babel-loader": "8.2.4",
-    "commitizen": "4.2.4",
-    "compression-webpack-plugin": "9.2.0",
-    "css-loader": "6.7.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
+    "commitizen": "4.3.0",
+    "compression-webpack-plugin": "10.0.0",
+    "css-loader": "6.7.3",
+    "css-minimizer-webpack-plugin": "4.2.2",
     "cssnano": "5.1.7",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.13.0",
+    "eslint": "8.33.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.5.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
     "eslint-import-resolver-webpack": "0.13.2",
     "eslint-plugin-class-property": "1.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
-    "eslint-webpack-plugin": "3.1.1",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-webpack-plugin": "3.2.0",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
     "import-glob-loader": "1.1.0",
-    "jest": "27.5.1",
-    "jest-cli": "27.5.1",
-    "mini-css-extract-plugin": "2.6.0",
-    "node-sass": "7.0.1",
+    "jest": "29.4.1",
+    "jest-cli": "29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "mini-css-extract-plugin": "2.7.2",
+    "node-sass": "8.0.0",
     "npm-upgrade": "3.1.0",
     "plop": "3.0.5",
-    "postcss": "8.4.12",
+    "postcss": "8.4.21",
     "postcss-import": "14.1.0",
-    "postcss-loader": "6.2.1",
-    "prettier": "2.6.2",
-    "rimraf": "3.0.2",
-    "sass-loader": "12.6.0",
+    "postcss-loader": "7.0.2",
+    "precss": "4.0.0",
+    "prettier": "2.8.3",
+    "rimraf": "4.1.2",
+    "sass-loader": "13.2.0",
     "script-ext-html-webpack-plugin": "2.1.5",
     "semantic-release": "19.0.2",
     "style-loader": "3.3.1",
@@ -90,33 +82,42 @@
     "stylelint-prettier": "2.0.0",
     "stylelint-scss": "4.2.0",
     "tailwindcss": "3.0.24",
-    "typescript": "4.6.3",
+    "ts-jest": "29.0.5",
+    "ts-loader": "9.4.2",
+    "typescript": "4.9.5",
     "url-loader": "4.1.1",
-    "webpack": "5.72.0",
-    "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.8.1",
+    "webpack": "5.75.0",
+    "webpack-bundle-analyzer": "4.7.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1",
     "webpack-merge": "5.8.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.1.1",
-    "@fortawesome/free-brands-svg-icons": "6.1.1",
-    "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@fortawesome/react-fontawesome": "0.1.18",
+    "@fortawesome/fontawesome-svg-core": "6.2.1",
+    "@fortawesome/free-brands-svg-icons": "6.2.1",
+    "@fortawesome/free-solid-svg-icons": "6.2.1",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@loadable/component": "5.15.2",
-    "classnames": "2.3.1",
-    "firebase": "^9.6.11",
+    "axios": "1.3.0",
+    "bootstrap": "5.2.3",
+    "classnames": "2.3.2",
+    "firebase": "9.16.0",
+    "firebase-admin": "11.5.0",
+    "firebase-tools": "11.22.0",
+    "global": "4.4.0",
     "history": "5.3.0",
+    "intersection-observer": "0.12.2",
     "lodash.throttle": "4.1.1",
+    "node-uuid": "1.4.8",
     "ramda": "0.28.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-redux": "^7.2.8",
-    "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "react-router": "6.8.0",
+    "react-router-dom": "6.8.0",
+    "redux": "4.1.2",
+    "redux-devtools-extension": "2.13.9",
+    "redux-thunk": "2.4.1"
   },
   "packageManager": "yarn@3.2.0"
 }
